Updated for XMLmind DITA Converter v3.12